# blockchain-intelligence

./: Cargo.toml  README.md  index.html
api-service/: Cargo.toml
api-service/src/: analytics.rs  database.rs  main.rs  metrics.rs  middleware.rs  redis_sub.rs  transaction.rs
infrastructure/: docker-compose.yml
ingestion-service/: .env  Cargo.toml
ingestion-service/src/: database.rs  generator.rs  main.rs  metrics.rs  redis_pub.rs  transaction.rs
shared/: Cargo.toml
shared/src/: lib.rs  stream.rs  transaction.rs
src/: database.rs  generator.rs  main.rs  transaction.rs
