[package]
name = "api-service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15.7"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"] }
shared = { path = "../shared" }