[package]
name = "ingestion-service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1", features = ["full"] }
dotenvy = "0.15.7"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"] }
redis = { version= "0.32", features = ["tokio-comp"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.17"
shared = { path = "../shared" }